[package]
name = "crossroadsbot"
version = "0.1.0"
authors = ["Narturio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4" }
chrono-tz = { version = "0.4" }
serenity = { version = "0.10", features = ["framework", "standard_framework", "collector", "rustls_backend"] }
tokio = { version = "1.5.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
dashmap = { version = "4.0.2" }
regex = { version = "1.4.6" }

[dev-dependencies]
diesel_migrations = { version = "1.4.0" }
