[package]
name = "crossroadsbot"
version = "1.0.0"
authors = ["Narturio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_migrations = { version = "1.4.0" }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4" }
serenity = { version = "0.10.10", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"] }
serenity_tools = { git = "https://github.com/pascalharp/serenity_tools.git", tag = "serenity-0.10.10" }
tokio = { version = "1.5.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
regex = { version = "1.4.6" }
serde = { version = "1.0.126" }
serde_json = { version = "1.0" }
csv = { version = "1.1" }
itertools = { version = "0.10.1" }
anyhow = { version = "1.0.52" }
url = { version = "2.2.2" }
